# kmpkg-tool

./: .clang-format  .gitignore  .kmdopkg.yaml  CMakeLists.txt  CMakePresets.json  Generate-SpdxLicenseList.ps1  NOTICE.txt  README.md  kmdobuild.sh  vcpkg.natvis
cmake/: utilities.cmake
cmrc/: CMakeLists.txt  CMakeRC.cmake
fmt/: CMakeLists.txt  ChangeLog.md
fmt/doc/: get-started.md
include/: pch.h
include/kmpkg/: archives.h  binarycaching.h  binarycaching.private.h  binaryparagraph.h  buildenvironment.h  bundlesettings.h  cgroup-parser.h  ci-baseline.h  ci-feature-baseline.h  cmakevars.h  commands.acquire-project.h  commands.acquire.h  commands.activate.h  commands.add-version.h  commands.add.h  commands.autocomplete.h  commands.bootstrap-standalone.h  commands.build-external.h  commands.build.h  commands.check-support.h  commands.ci-clean.h  commands.ci-verify-versions.h  commands.ci.h  commands.contact.h  commands.create.h  commands.deactivate.h  commands.depend-info.h  commands.download.h  commands.edit.h  commands.env.h  commands.export.h  commands.fetch.h  commands.find.h  commands.format-feature-baselinet.h  commands.format-manifest.h  commands.generate-msbuild-props.h  commands.h  commands.hash.h  commands.help.h  commands.init-registry.h  (+58 more)
include/kmpkg-test/: mockcmakevarprovider.h  util.h
include/kmpkg/base/: api-stable-format.h  cache.h  checks.h  chrono.h  cmd-parser.h  cofffilereader.h  contractual-constants.h  delayed-init.h  diagnostics.h  downloads.h  enums.h  expected.h  file-contents.h  file_sink.h  files.h  fmt.h  git.h  graphs.h  hash.h  json.h  jsonreader.h  lazy.h  lineinfo.h  message-args.inc.h  message-data.inc.h  message_sinks.h  messages.h  optional.h  parallel-algorithms.h  parse.h  path.h  pragmas.h  setup-messages.h  sortedvector.h  span.h  strings.h  stringview.h  system.debug.h  system.deviceid.h  system.h  (+9 more)
include/kmpkg/base/fwd/: cmd-parser.h  cofffilereader.h  diagnostics.h  downloads.h  expected.h  file-contents.h  files.h  fmt.h  git.h  graphs.h  json.h  message_sinks.h  messages.h  optional.h  parse.h  span.h  stringview.h  system.h  system.process.h
include/kmpkg/fwd/: binarycaching.h  binaryparagraph.h  build.h  bundlesettings.h  ci-baseline.h  cmakevars.h  commands.install.h  configuration.h  dependencies.h  installedpaths.h  kmpkgcmdarguments.h  kmpkgpaths.h  packagespec.h  paragraphparser.h  portfileprovider.h  registries.h  sourceparagraph.h  statusparagraph.h  statusparagraphs.h  tools.h  triplet.h  versions.h
locales/: messages.cs.json  messages.de.json  messages.es.json  messages.fr.json  messages.it.json  messages.ja.json  messages.json  messages.ko.json  messages.pl.json  messages.pt-BR.json  messages.ru.json  messages.tr.json  messages.zh-Hans.json  messages.zh-Hant.json
scripts/: addPoshVcpkgToPowershellProfile.ps1  applocal.ps1  posh-kmpkg.psd1  posh-kmpkg.psm1  verifyMessages.ps1
src/: kmpkg-in-development.ps1  kmpkg.cpp  test-editor.c  test-script-asset-cache.c  tls12-download.c
src/kmpkg/: archives.cpp  binarycaching.cpp  binaryparagraph.cpp  buildenvironment.cpp  bundlesettings.cpp  cgroup-parser.cpp  ci-baseline.cpp  ci-feature-baseline.cpp  cmakevars.cpp  commands.acquire-project.cpp  commands.acquire.cpp  commands.activate.cpp  commands.add-version.cpp  commands.add.cpp  commands.autocomplete.cpp  commands.bootstrap-standalone.cpp  commands.build-external.cpp  commands.build.cpp  commands.check-support.cpp  commands.ci-clean.cpp  commands.ci-verify-versions.cpp  commands.ci.cpp  commands.contact.cpp  commands.cpp  commands.create.cpp  commands.deactivate.cpp  commands.depend-info.cpp  commands.download.cpp  commands.edit.cpp  commands.env.cpp  commands.export.cpp  commands.fetch.cpp  commands.find.cpp  commands.format-feature-baseline.cpp  commands.format-manifest.cpp  commands.generate-msbuild-props.cpp  commands.hash.cpp  commands.help.cpp  commands.init-registry.cpp  commands.install.cpp  (+52 more)
src/kmpkg-fuzz/: main.cpp
src/kmpkg-test/: archives.cpp  arguments.cpp  binarycaching.cpp  bundlesettings.cpp  cache.cpp  catch.cpp  cgroup-parser.cpp  chrono.cpp  ci-baseline.cpp  cmd-parser.cpp  coffilereader.cpp  commands.build.cpp  commands.dependinfo.cpp  commands.extract.cpp  commands.install.cpp  configmetadata.cpp  configparser.cpp  dependencies.cpp  dependinfo-graphs.cpp  downloads.cpp  expected.cpp  export.cpp  files.cpp  git.cpp  hash.cpp  input.cpp  integrate.cpp  issue_body.cpp  json.cpp  manifests.cpp  messages.cpp  metrics.cpp  mockcmakevarsprovider.cpp  new.cpp  optional.cpp  paragraph.cpp  plan.cpp  platform-expression.cpp  registries.cpp  spdx.cpp  (+16 more)
src/kmpkg/base/: checks.cpp  chrono.cpp  cmd-parser.cpp  cofffilereader.cpp  diagnostics.cpp  downloads.cpp  files.cpp  git.cpp  hash.cpp  json.cpp  message_sinks.cpp  messages.cpp  parse.cpp  strings.cpp  stringview.cpp  system.cpp  system.deviceid.cpp  system.mac.cpp  system.process.cpp  system.proxy.cpp  uint128.cpp  unicode.cpp  uuid.cpp  xmlserializer.cpp
src/localization/cs/: messages.json.lcl
src/localization/de/: messages.json.lcl
src/localization/es/: messages.json.lcl
src/localization/fr/: messages.json.lcl
src/localization/it/: messages.json.lcl
src/localization/ja/: messages.json.lcl
src/localization/ko/: messages.json.lcl
src/localization/pl/: messages.json.lcl
src/localization/pt-BR/: messages.json.lcl
src/localization/ru/: messages.json.lcl
src/localization/tr/: messages.json.lcl
src/localization/zh-Hans/: messages.json.lcl
src/localization/zh-Hant/: messages.json.lcl
